Quick Start & Examples/Traffic-management/AWS ALB/Instance Mode/CanaryService.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
