Quick Start & Examples/Traffic-management/AWS ALB/Instance Mode/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rollouts-demo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: rollouts-demo-root
          servicePort: use-annotation
